# drone-ops-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/diagnosis_agent/: README.md
agents/log_analysis_agent/: README.md
agents/maintenance_agent/: README.md
agents/monitoring_agent/: README.md
agents/orchestrator/: README.md
agents/preflight_agent/: README.md
agents/report_agent/: README.md
agents/simulation_agent/: README.md
apps/: __init__.py
apps/cli/: main.py
constraints/: dev.txt  optional-parsers.txt  release.txt  runtime.txt
data/open_source_logs/: registry.json
data/sample_adapters/: offline_adapter_registry.json
data/sample_approvals/: approval_packet.json
data/sample_assets/: battery_001.json  battery_degraded.json  uav_001.json
data/sample_datasets/: registry.json
data/sample_evals/: diagnosis_report_eval_case.json
data/sample_fleet/: fleet_manifest.json
data/sample_handoff/: organization_handoff_package.json
data/sample_logs/: README.md  example_flight.csv  example_flight.json  example_px4_mock.ulg  example_telemetry.csv  example_telemetry.json
data/sample_missions/: example_mission.json  preflight_observations_blocking.json  preflight_observations_ok.json  preflight_observations_warning.json
data/sample_platform/: operations_platform_baseline.json  platform_readiness_checklist.json  platform_readiness_index.json  report_bundle_manifest.json  workspace_project.json
data/sample_rule_packs/: offline_default_rules.json
data/sample_rules/: monitoring_rules.yaml  preflight_rules.yaml
data/sample_simulation/: example_scenario.json  example_simulation_result.json  scenario_matrix.json
docs/: architecture.md  audit_policy.md  codex_workflows.md  data_contracts.md  dataset_registry.md  demo_guide.md  diagnosis_report_evaluation.md  evaluation_case_studies.md  fleet_health_analytics.md  local_dashboard.md  log_parser_coverage.md  offline_adapters.md  open_source_log_case_study.md  operations_platform_baseline.md  organization_handoff.md  platform_readiness.md  platform_readiness_index.md  reproducible_distribution.md  roadmap.md  rule_pack_versioning.md  safety_policy.md  simulation_scenario_matrix.md  v0.7.0_release_readiness.md  v0.9.0_release_readiness.md  v1.0.0_release_readiness.md  v1.0.0_safety_regression_gate.md  v1.0.0_stable_contract.md  v1.1.0_release_readiness.md  v1.2.0_release_readiness.md  v1.3.0_release_readiness.md  v1.4.0_release_readiness.md  v1.5.0_release_readiness.md  v1.6.0_release_readiness.md  v1.7.0_release_readiness.md  v1.8.0_release_readiness.md  v1.9.0_release_readiness.md  v2.0.0_release_readiness.md  v2.1.0_release_readiness.md  v2.2.0_release_readiness.md  v2.3.0_release_readiness.md  (+5 more)
docs/planning/: v0.8-to-v2.0-roadmap.md
docs/portfolio/: capability_matrix.md  demo_script.md  project_overview_en.md  resume_and_interview_guide.md  项目总览.md
docs/releases/: v0.4.0.md  v0.5.0-draft.md  v0.5.0.md  v0.6.0-draft.md  v0.6.0.md  v0.7.0-draft.md  v0.7.0.md  v0.8.0-draft.md  v0.8.0.md  v0.9.0-draft.md  v0.9.0.md  v1.0.0-draft.md  v1.1.0-draft.md  v1.2.0-draft.md  v1.3.0-draft.md  v1.4.0-draft.md  v1.5.0-draft.md  v1.6.0-draft.md  v1.7.0-draft.md  v1.8.0-draft.md  v1.9.0-draft.md  v2.0.0-draft.md  v2.1.0-draft.md  v2.2.0-draft.md  v2.3.0-draft.md  v2.4.0-draft.md  v2.5.0-draft.md  v2.5.1-draft.md  v2.5.2-draft.md
scripts/: __init__.py  build_portfolio_showcase.py  build_release_bundle.py  check_environment.py  generate_demo_outputs.py  verify_release.ps1
(+130 files in other folders)
