[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-ops-agent"
version = "0.1.0"
description = "Offline drone operations support agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "reportlab>=4.2,<5",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
px4 = [
  "pyulog>=1.1,<2",
]
ardupilot = [
  "pymavlink>=2.4,<3",
]
sim = [
]
dev = [
  "pypdf>=5,<7",
  "pytest>=8,<9",
]

[project.scripts]
drone-ops = "apps.cli.main:app"

[tool.setuptools]
packages = [
  "apps",
  "apps.cli",
  "packages",
  "packages.drone_schemas",
  "packages.log_parsers",
  "packages.telemetry_rules",
  "packages.anomaly_detection",
  "packages.diagnosis_rules",
  "packages.maintenance_rules",
  "packages.preflight_rules",
  "packages.state_monitoring",
  "packages.simulation",
  "packages.report_templates",
  "packages.report_validation",
  "packages.audit_logger",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
