[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-ops-agent"
version = "2.5.2"
description = "Offline drone operations decision support platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "packaging>=23,<27",
  "pydantic>=2.7,<3",
  "reportlab>=4.2,<5",
  "starlette>=0.37,<1",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
px4 = [
  "pyulog>=1.1,<2",
]
ardupilot = [
  "pymavlink>=2.4,<3",
]
sim = [
]
dev = [
  "build>=1.3,<2",
  "httpx>=0.27,<1",
  "pypdf>=5,<7",
  "pytest>=8,<9",
]

[project.scripts]
drone-ops = "apps.cli.main:app"

[tool.setuptools]
packages = [
  "apps",
  "apps.cli",
  "packages",
  "packages.adapter_workflows",
  "packages.drone_schemas",
  "packages.dataset_registry",
  "packages.dashboard",
  "packages.evals",
  "packages.platform_readiness",
  "packages.rule_packs",
  "packages.log_parsers",
  "packages.telemetry_rules",
  "packages.organization_handoff",
  "packages.platform_index",
  "packages.operations_platform",
  "packages.open_source_logs",
  "packages.anomaly_detection",
  "packages.diagnosis_rules",
  "packages.maintenance_rules",
  "packages.preflight_rules",
  "packages.state_monitoring",
  "packages.simulation",
  "packages.report_templates",
  "packages.report_validation",
  "packages.audit_logger",
  "packages.work_orders",
  "packages.fleet_health",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
